# hpi-cim-provider

./: .cvsignore  AUTHORS  COPYING  Makefile.am  acinclude.m4  config.h.in  configure.ac  howto  hpi-cim.spec.in  mof_howto_install  provider-register.sh  setting.cmpi
include/: hpi_utils.h
mofs/: Hpi.mof  Hpi.registration  HpiRegister.mof  Makefile.am  SimpleProcess.mof  SimpleProcessRegister.mof
src/: .cvsignore  Hpi.c  HpiCimProvider.c  Makefile.am  enumeration.c  hpi_utils.c
utils/: Makefile.am  utils.c  utils.h
